# ProductionGradeRAGPythonApp

./: .gitignore  custom_types.py  data_loader.py  main.py  pyproject.toml  shutdown.sh  start.sh  streamlit_app.py  vector_db.py
ingesters/: document_ingester.py  image_ingester.py  video_ingester.py
retrieval/: query_expander.py  reranker.py
