[project]
name = "ragproductionapp"
version = "0.1.0"
description = "Production RAG app — documents, images, and video"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web framework + async worker
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "inngest>=0.5.6",

    # LLM + embeddings
    "openai>=1.107.0",

    # Document ingestion
    "llama-index-core>=0.14.0",
    "llama-index-readers-file>=0.5.4",
    "python-docx>=1.1.2",

    # Image handling
    "Pillow>=11.0.0",

    # Video: local transcription + frame extraction
    "openai-whisper>=20240930",
    "opencv-python>=4.10.0.84",

    # Vector database
    "qdrant-client>=1.15.1",

    # Sparse embeddings for hybrid search (SPLADE via fastembed)
    "fastembed>=0.4.2",

    # Local reranking
    "sentence-transformers>=3.3.1",

    # Utilities
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
    "plotly>=6.0.0",
    "umap-learn>=0.5.12",
]
